Fixed spacing of page title on 500-800 viewport

--- a/sass/uhd.responsive.custom.scss
+++ b/sass/uhd.responsive.custom.scss
@@ -227,8 +227,6 @@
     }
 
     h1#page-title {
-      bottom: 0;
-      left: 0;
       @include font-size(2.8);
     }
   }
